syntax = 'proto3';


package protobuf.response;

enum Environment {
    UNKNOWN_ENVIRONMENT = 0 ; /* need a zero, but doesn't work with protobuf_to_dict */
    PRODUCTION = 1;
    DEVELOPMENT = 2;
    STAGING = 3;
}

message messageData {
    double timestamp = 1;
    Environment environment = 2;
    string sending_service = 3;
    string uuid = 4;
    string iso_date = 5;
    int64 offset = 6;
    int64 partition = 7;
    string trace_id = 8;
}


message responsedata {
   string requestId = 1;
   string resultCode = 2;
  message RESULTPATHS {
    string type = 1;
    string path = 2;
    }
   repeated RESULTPATHS resultPaths = 3;
   messageData _message_data = 4;
}
